--- a/index.ipynb
+++ b/index.ipynb
@@ -31,22 +31,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# State you null and alternative hypotheses\n"
+    "# Ha: time to rent car is greater than 60 seconds\n",
+    "# Ho: time to rent car is less than or equal to 60 seconds\n",
+    "\n",
+    "# Ha: mu > 60\n",
+    "# Ho: mu <= 60"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.0013498980316301035, 3.0)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your solution here\n",
     "\n",
+    "import scipy\n",
+    "import math\n",
+    "import scipy.stats as stats\n",
     "\n",
+    "x_bar = 75\n",
+    "mu = 60\n",
+    "n = 36\n",
+    "sigma = 30\n",
+    "\n",
+    "z = (x_bar - mu) / (sigma / math.sqrt(n))\n",
+    "\n",
+    "pval = 1 - stats.norm.cdf(z)\n",
+    "pval, z\n",
     "# (p = 0.0013498980316301035, z = 3.0)"
    ]
   },
@@ -57,7 +84,9 @@
    "outputs": [],
    "source": [
     "# Interpret the results in terms of p-value obtained\n",
-    "\n"
+    "\n",
+    "# p-value is less than 0.05, therefore reject Ho. Time to rent car is SIGNIFICANTLY \n",
+    "# longer than company claims\n"
    ]
   },
   {
@@ -85,33 +114,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# State your hypotheses \n"
+    "# State your hypotheses \n",
+    "\n",
+    "# Ha: SAT prep significantly increases SAT scores\n",
+    "# Ho: SAT prep does not significantly increase SAT scores"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.03593031911292577, 1.8)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Give your solution here \n",
+    "import scipy.stats as stats\n",
+    "import math\n",
+    "import numpy as np\n",
     "\n",
+    "sample = np.array([434, 694, 457, 534, 720, 400, 484, 478, 610, 641, 425, 636, 454, 514, 563, 370, 499, 640, 501, 625, 612, 471, 598, 509, 531])\n",
+    "alpha = 0.05\n",
     "\n",
+    "x_bar = sample.mean()\n",
+    "n = 25\n",
+    "mu = 500\n",
+    "sigma = 100\n",
+    "\n",
+    "z = (x_bar - mu) / (sigma / math.sqrt(n))\n",
+    "\n",
+    "p = 1 - stats.norm.cdf(z)\n",
+    "\n",
+    "p, z\n",
     "\n",
     "# p = 0.03593031911292577, z = 1.8"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Interpret the results in terms of p-value obtained\n"
+    "# Interpret the results in terms of p-value obtained\n",
+    "\n",
+    "# p is less than the alpha, reject null. \n",
+    "# SAT prep significantly increases SAT scores."
    ]
   },
   {
@@ -147,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
